{
    "name": "InputMaster",
    "maps": [
        {
            "name": "DepthRay",
            "id": "23cd7bf6-888a-43e4-bb0a-6c434504f6f8",
            "actions": [
                {
                    "name": "CastRay",
                    "type": "Value",
                    "id": "d3e0bbea-c84d-4334-8727-90bdce684e4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveSphere",
                    "type": "Value",
                    "id": "7762bf7b-b0d7-4f25-ad38-31663ddc3cc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "b65c3c23-7724-4dee-b1af-b0c56f07615f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae281d4e-9f79-4291-a368-68a1bbaf250b",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastRay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "960b8213-0626-42fe-8284-825afcb9e5d3",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "867a061b-4175-450d-b135-298ef20a9eac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSphere",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a36eaba4-4372-4427-bd85-3814edbb54f9",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSphere",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a060075e-4bb7-4b51-98f8-57fe251ebe05",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSphere",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "RopeCursor",
            "id": "4a9455b2-587d-41cb-b681-dce2359032c1",
            "actions": [
                {
                    "name": "CastRay",
                    "type": "Value",
                    "id": "7d450c6f-0f8d-4289-886e-ffb214512a81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveSphere",
                    "type": "Value",
                    "id": "b8e029d3-8c15-4281-af9b-10ca00682662",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "a334f505-bb64-474c-9cc0-aa172090d635",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "601b58bd-b780-4dd4-bef3-0f90cf337628",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastRay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14a50f4b-0241-4121-87cf-af9cf093fa13",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "72cdb3ec-25af-499c-89c5-4d6409c6ab6f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSphere",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3d2483a8-8157-4164-af9c-881ce80cedcf",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSphere",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f6c46497-d629-4b14-9fb8-5c5f99d4791d",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveSphere",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "TouchPad",
            "id": "d0da20ae-d0c7-42aa-8b76-2a49d1d98f0a",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "11ef1abd-5d86-47ba-844e-9112e79febb8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveTouch",
                    "type": "Value",
                    "id": "f91d8ca3-10e4-4d34-b436-fb04d3f5a664",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "710b156d-4a8b-455a-9173-ddbc7d733f16",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5eff482a-1bc6-4f93-a2b9-4c2b5a29032c",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SceneManager",
            "id": "7c702777-213b-43c6-89d0-171e4c19ec14",
            "actions": [
                {
                    "name": "Scene1",
                    "type": "Button",
                    "id": "9cfc1d98-f973-4750-820a-a67c628be407",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scene2",
                    "type": "Button",
                    "id": "eb811051-35a0-4524-9c55-3c3e7a9dc49a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scene3",
                    "type": "Button",
                    "id": "eee1fb03-f40a-49f6-bcb9-368d461d5f92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scene4",
                    "type": "Button",
                    "id": "355bf71c-be37-4184-9eb3-68579f336cd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scene5",
                    "type": "Button",
                    "id": "76a6d7dc-d53b-4314-bfe8-02a810621f2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1cfd578e-0c30-41c3-b633-f2379f5432d9",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bf876a4-12af-4380-8449-3ea9e4ee2c31",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "502cdd9b-03a5-485c-9ec0-f75f0dc16fd8",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "828eafc4-0356-4b14-a5e9-78b0571fbb9b",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edd87bb1-1b80-4057-af05-f45c9488c58d",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scene5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}